# elasticsearch-python-demo

./: README.md  docker-compose.yml  pyproject.toml
src/elasticsearch_demo/: elasticsearch_demo.py
