[project]
name = "elasticsearch-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric London",email = "github@ericlondon.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "elasticsearch_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
