[project]
name = "elasticsearch-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric London",email = "github@ericlondon.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=37.1.0,<38.0.0)",
    "elasticsearch (>=8.0.0,<9.0.0)",  # Use a version range compatible with Elasticsearch 8.x
]

[tool.poetry]
packages = [{include = "elasticsearch_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
populate_people = "elasticsearch_demo.elasticsearch_demo:populate_people"
get_person = "elasticsearch_demo.elasticsearch_demo:get_person"
